--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "bootstrap": "^4.4.1",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
+    "query-string": "^6.11.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
